tests/errors/lex_hex.java
public class lex_hex {
	float a = 0x11;
}
